# knowledge-base

./: .gitignore  ARCHITECTURE.md  README.md  config.yaml  consolidate.py  context.py  embeddings.py  harness.py  ingest.py  mcp_server.py  pyproject.toml  record.py  reflect.py  retrieve.py  schema.py
